--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@
 /build
 
 # misc
+node_modules
+.env
 .DS_Store
 .env.local
-.env.development.local
+# .env.development.local
 .env.test.local
 .env.production.local
 
