--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-outside-click-handler": "^1.3.0",
     "react-scripts": "5.0.1",
+    "uuid": "^10.0.0",
     "web-vitals": "^4.2.1"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-outside-click-handler": "^1.3.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-no-relative-import-paths": "^1.5.5",
